cluster-metal/rook/loadbalancer.nfs.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    ipPool: metal-cephnet
  annotations:
    "lbipam.cilium.io/ips": "10.83.67.32"
  name: rook-nfs-lb
  namespace: rook-ceph
spec:
  ports:
    - name: nfs
      port: 2049
      protocol: TCP
      targetPort: 2049
  selector:
    ceph_nfs: rook-nfs
  type: LoadBalancer
